# d-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh
core/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  component.cpp  component.h  d_engine.cpp  d_engine.h  gameobject.cpp  gameobject.h  scene.cpp  scene.h  sprite.cpp  sprite.h  transform.cpp  transform.h  vector2.cpp  vector2.h
tests/: CMakeLists.txt  gameobject_test.cpp  scene_test.cpp  vector2_test.cpp
